<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.groupeleven.studentlife.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.groupeleven.studentlife.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_todolist"
        android:name="com.groupeleven.studentlife.ui.todolist.TodolistFragment"
        android:label="@string/title_todolist"
        tools:layout="@layout/fragment_todolist" />
</navigation>