<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/usefullink_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.usefullinks.UsefullinksFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

<!--        <ImageButton-->
<!--            android:id="@+id/tutorial_button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginStart="0dp"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:layout_weight="0"-->
<!--            android:background="#FFFFFF"-->
<!--            android:scaleType="fitCenter"-->
<!--            android:src="@drawable/ic_tutorial" />-->

        <Button
            android:id="@+id/tutorial_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Student Life APP Tutorial"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/study_helper"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_weight="5"
                android:src="@drawable/ic_study_helper" />

            <TextView
                android:id="@+id/study_website_static_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="60dp"
                android:layout_weight="5"
                android:text="Essential Websites"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/link_desmos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:text="@string/link_desmos"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/link_khan_academy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/link_khan_academy"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/link_wiki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/link_wiki"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/link_quizlet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/link_quizlet"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/link_ocw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/link_ocw"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/link_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/link_youtube"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:typeface="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/study_guide"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_weight="5"
                android:src="@drawable/ic_study_guide" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="60dp"
                android:layout_weight="5"
                android:text="Essential Tools"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/link_iclicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:text="@string/link_iclicker"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/link_crowdmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/link_crowdmark"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/link_umlearn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/link_umlearn"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/link_gather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/link_gather"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/link_google_doc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/link_google_doc"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:typeface="normal" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>